Add endpoints for goals
